server-root depencency

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 		"json-validation": "^1.0.4",
 		"log4js": "^0.6.33",
 		"moment": "^2.11.1",
-		"underscore": "^1.8.3"
+		"underscore": "^1.8.3",
+        "server-root": "^1.0.7"
 	}
 }
