--- a/package.json
+++ b/package.json
@@ -1,30 +1,48 @@
 {
-	"name": "dropbox-backup",
-	"version": "1.0.19",
-	"description": "a backup utility for dropbox applications",
-	"author": {
-		"name": "Apostolis Konoupakis",
-		"email": "konoupakis@gmail.com",
-		"url": ""
-	},
-	"repository": {
-		"type": "git",
-		"url": "https://github.com/akonoupakis/dropbox-backup.git"
-	},
-	"bugs": {
-		"url": "https://github.com/akonoupakis/dropbox-backup/issues"
-	},
-	"main": "index.js",
-	"license": "MIT",
-	"homepage": "https://github.com/akonoupakis/dropbox-backup",
-	"dependencies": {
-		"archiver": "^0.21.0",
-		"dropbox": "^0.10.3",
-		"fs-extra": "^0.26.4",
-		"json-validation": "^1.0.4",
-		"log4js": "^0.6.33",
-		"moment": "^2.11.1",
-		"underscore": "^1.8.3",
-		"server-root": "^1.0.7"
-	}
+  "name": "dropbox-backup",
+  "version": "1.0.19",
+  "description": "a backup utility for dropbox applications",
+  "author": {
+    "name": "Apostolis Konoupakis",
+    "email": "konoupakis@gmail.com",
+    "url": ""
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/akonoupakis/dropbox-backup.git"
+  },
+  "bugs": {
+    "url": "https://github.com/akonoupakis/dropbox-backup/issues"
+  },
+  "main": "./lib/DropboxBackup.js",
+  "scripts": {
+	"test": "standard & mocha"
+  },
+  "standard": {
+    "ignore": [
+      "/docs/"
+    ]
+  },
+  "files": [
+	"lib/**"
+  ],
+  "license": "MIT",
+  "homepage": "https://github.com/akonoupakis/dropbox-backup",
+  "dependencies": {
+    "archiver": "^0.21.0",
+    "dropbox": "^0.10.3",
+    "fs-extra": "^0.26.4",
+    "json-validation": "^1.0.4",
+    "log4js": "^0.6.33",
+    "moment": "^2.11.1",
+    "underscore": "^1.8.3",
+    "server-root": "^1.0.7"
+  },
+  "devDependencies": {
+    "dependency-check": "^2.5.1",
+    "jsdoc": "^3.4.0",
+    "minami": "^1.1.1",
+    "mocha": "^2.4.5",
+    "standard": "^6.0.8"
+  }
 }
