--- a/jsdoc.config.json
+++ b/jsdoc.config.json
@@ -5,6 +5,13 @@
     },    
     "source": {
         "include": [
+            "lib/DropboxBackup.js",
+            "lib/DropboxBackup.js",
+            "lib/DropboxBackup.js",
+            "lib/DropboxBackup.js",
+            "lib/DropboxBackup.js",
+            "lib/DropboxBackup.js",
+            "lib/DropboxBackup.js",
             "lib/DropboxBackup.js"
         ]
     },
